--- a/sys/Makefile.am
+++ b/sys/Makefile.am
@@ -53,6 +53,7 @@ CDROM_DIR=
 endif
 
 SUBDIRS=$(DXR3_DIR) $(OSS_DIR) $(QCAM_DIR) $(V4L_DIR) $(V4L2_DIR) \
-	$(VCD_DIR) $(VGA_DIR) $(XVIDEO_DIR) $(CDROM_DIR)
+	$(VCD_DIR) $(VGA_DIR) $(XVIDEO_DIR) $(CDROM_DIR) glsink
 
-DIST_SUBDIRS=dxr3 oss qcam v4l v4l2 vcd vga xvideo videosink cdrom
+DIST_SUBDIRS=dxr3 oss qcam v4l v4l2 vcd vga xvideo videosink cdrom glsink
+
