--- a/Makefile.am
+++ b/Makefile.am
@@ -27,6 +27,20 @@ EXTRA_DIST=gst-plugins.spec depcomp \
 	   AUTHORS COPYING README RELEASE REQUIREMENTS \
 	   ChangeLog autogen.sh common m4
 
+# to do a release, run "make release"
+# this will generate all archives and md5sums
+                                                                                
+# make bz2 as well
+AUTOMAKE_OPTIONS = dist-bzip2
+                                                                                
+release: dist
+	make @PACKAGE@-@VERSION@.tar.gz.md5
+	make @PACKAGE@-@VERSION@.tar.bz2.md5
+                                                                                
+# generate md5 sum files
+%.md5: %
+	md5sum $< > $@
+                                                                                
 dist-hook:
 	rm -rf `find $(distdir)/common -name CVS`
 	rm -rf `find $(distdir)/m4 -name CVS`
