--- a/gst/multipart/Makefile.am
+++ b/gst/multipart/Makefile.am
@@ -2,8 +2,8 @@ plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = libgstmultipart.la
 
-libmultipart_la_SOURCES = multipart.c multipartdemux.c multipartmux.c
-libmultipart_la_CFLAGS = $(GST_CFLAGS)
-libmultipart_la_LIBADD = 
-libmultipart_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstmultipart_la_SOURCES = multipart.c multipartdemux.c multipartmux.c
+libgstmultipart_la_CFLAGS = $(GST_CFLAGS)
+libgstmultipart_la_LIBADD = 
+libgstmultipart_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
