--- a/gst/avi/Makefile.am
+++ b/gst/avi/Makefile.am
@@ -2,12 +2,12 @@ plugin_LTLIBRARIES = libgstavi.la
 
 libgstavi_la_SOURCES = \
 	gstavi.c \
-	gstavidemux.c \
-	gstavimux.c 
+	gstavidemux.c
+
+#gstavimux.c 
 
 noinst_HEADERS = \
 	avi-ids.h \
-	gstavimux.h \
 	gstavidemux.h
 
 libgstavi_la_CFLAGS = $(GST_CFLAGS)
