Add GConf video/audio sink handling elements. Automagically change contained element on GConf change.
Original commit message from CVS:
* configure.ac:
* ext/Makefile.am:
* ext/gconf/Makefile.am:
* ext/gconf/gstgconfaudiosink.c: (gst_gconf_audio_sink_get_type),
(gst_gconf_audio_sink_base_init),
(gst_gconf_audio_sink_class_init), (gst_gconf_audio_sink_init),
(gst_gconf_audio_sink_dispose), (cb_toggle_element),
(gst_gconf_audio_sink_change_state):
* ext/gconf/gstgconfaudiosink.h:
* ext/gconf/gstgconfelements.c: (plugin_init):
* ext/gconf/gstgconfelements.h:
* ext/gconf/gstgconfvideosink.c: (gst_gconf_video_sink_get_type),
(gst_gconf_video_sink_base_init),
(gst_gconf_video_sink_class_init), (gst_gconf_video_sink_init),
(gst_gconf_video_sink_dispose), (cb_toggle_element),
(gst_gconf_video_sink_change_state):
* ext/gconf/gstgconfvideosink.h:
Add GConf video/audio sink handling elements. Automagically
change contained element on GConf change.
* gst/autodetect/Makefile.am:
* gst/autodetect/gstautoaudiosink.c:
(gst_auto_audio_sink_get_type), (gst_auto_audio_sink_base_init),
(gst_auto_audio_sink_class_init), (gst_auto_audio_sink_init),
(gst_auto_audio_sink_factory_filter),
(gst_auto_audio_sink_compare_ranks),
(gst_auto_audio_sink_find_best), (gst_auto_audio_sink_detect):
* gst/autodetect/gstautoaudiosink.h:
* gst/autodetect/gstautodetect.c: (plugin_init):
* gst/autodetect/gstautodetect.h:
* gst/autodetect/gstautovideosink.c:
(gst_auto_video_sink_get_type), (gst_auto_video_sink_base_init),
(gst_auto_video_sink_class_init), (gst_auto_video_sink_init),
(gst_auto_video_sink_factory_filter),
(gst_auto_video_sink_compare_ranks),
(gst_auto_video_sink_find_best), (gst_auto_video_sink_detect):
* gst/autodetect/gstautovideosink.h:
Add video/audio output autodetection elements, based on ranks.
No sound server handling in autoaudiosink yet.
* ext/alsa/gstalsaplugin.c: (plugin_init):
* sys/oss/gstossaudio.c: (plugin_init):
Change ranks to prefer ALSA over OSS.

--- a/configure.ac
+++ b/configure.ac
@@ -369,6 +369,7 @@ GST_PLUGINS_ALL="\
 	audioscale \
 	audiorate \
 	auparse \
+	autodetect \
 	avi \
 	cdxaparse \
 	chart \
@@ -1951,6 +1952,7 @@ gst/audioconvert/Makefile
 gst/audioscale/Makefile
 gst/audiorate/Makefile
 gst/auparse/Makefile
+gst/autodetect/Makefile
 gst/avi/Makefile
 gst/cdxaparse/Makefile
 gst/chart/Makefile
@@ -2061,6 +2063,7 @@ ext/esd/Makefile
 ext/faac/Makefile
 ext/faad/Makefile
 ext/flac/Makefile
+ext/gconf/Makefile
 ext/gdk_pixbuf/Makefile
 ext/gnomevfs/Makefile
 ext/gsm/Makefile
