--- a/ext/Makefile.am
+++ b/ext/Makefile.am
@@ -130,6 +130,12 @@ else
 FLAC_DIR=
 endif
 
+if USE_GCONF
+GCONF_DIR = gconf
+else
+GCONF_DIR =
+endif
+
 if USE_GDK_PIXBUF
 GDK_PIXBUF_DIR=gdk_pixbuf
 else
@@ -418,6 +424,7 @@ SUBDIRS=\
 	$(FAAC_DIR) \
 	$(FAAD_DIR) \
 	$(FLAC_DIR) \
+	$(GCONF_DIR) \
 	$(GDK_PIXBUF_DIR) \
 	$(GNOMEVFS_DIR) \
 	$(GSM_DIR) \
@@ -483,6 +490,7 @@ DIST_SUBDIRS=\
 	faac \
 	faad \
 	flac \
+	gconf \
 	gdk_pixbuf \
 	gnomevfs \
 	gsm \
