--- a/sys/Makefile.am
+++ b/sys/Makefile.am
@@ -36,8 +36,10 @@ endif
 
 if USE_GST_V4L
 V4L_DIR=v4l
+V4LRADIO_DIR=v4lradio
 else
 V4L_DIR=
+V4LRADIO_DIR=
 endif
 
 if USE_GST_V4L2
@@ -76,10 +78,34 @@ else
 GL_DIR=
 endif
 
-SUBDIRS=$(DXR3_DIR) $(OSS_DIR) $(OSX_AUDIO_DIR) $(OSX_VIDEO_DIR) $(QCAM_DIR) \
-        $(SUNAUDIO_DIR) $(V4L_DIR) $(V4L2_DIR) $(VCD_DIR) $(CDROM_DIR) \
-        $(XI_DIR) $(XV_DIR) $(GL_DIR)
+SUBDIRS = \
+	$(DXR3_DIR) \
+	$(OSS_DIR) \
+	$(OSX_AUDIO_DIR) \
+	$(OSX_VIDEO_DIR) \
+	$(QCAM_DIR) \
+        $(SUNAUDIO_DIR) \
+	$(V4L_DIR) \
+	$(V4L2_DIR) \
+	$(V4LRADIO_DIR) \
+	$(VCD_DIR) \
+	$(CDROM_DIR) \
+        $(XI_DIR) \
+	$(XV_DIR) \
+	$(GL_DIR)
 
-DIST_SUBDIRS=dxr3 oss osxaudio osxvideo qcam sunaudio v4l v4l2 vcd ximage \
-        xvimage glsink cdrom
-
+DIST_SUBDIRS = \
+	dxr3 \
+	oss \
+	osxaudio \
+	osxvideo \
+	qcam \
+	sunaudio \
+	v4l \
+	v4l2 \
+	v4lradio \
+	vcd \
+	ximage \
+        xvimage \
+	glsink \
+	cdrom
