configure.ac: Add X_CFLAGS to CFLAGS while checking for
Original commit message from CVS:
* configure.ac:
Add X_CFLAGS to CFLAGS while checking for
X11/Xlib.h, otherwise we won't find X if it's
installed in an unusual location (fixes #300495).

--- a/configure.ac
+++ b/configure.ac
@@ -607,7 +607,10 @@ GST_CHECK_FEATURE(X, [X libraries and plugins],
                   [ximagesink], [
   AC_PATH_XTRA
   dnl now try to find the HEADER
+  save_cflags=$CFLAGS
+  CFLAGS="$CFLAGS $X_CFLAGS"
   AC_CHECK_HEADER(X11/Xlib.h, HAVE_X="yes", HAVE_X="no")
+  CFLAGS="$save_cflags"
 
   if test "x$HAVE_X" = "xno"
   then
