po/POTFILES.in: Add some new files (#304125).
Original commit message from CVS:
Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
* po/POTFILES.in:
Add some new files (#304125).

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,18 +1,31 @@
 ext/alsa/gstalsamixertrack.c
+ext/alsa/gstalsa.c
+ext/alsa/gstalsamixer.c
+ext/alsa/gstalsamixertrack.c
 ext/audiofile/gstafsink.c
 ext/audiofile/gstafsrc.c
 ext/cdparanoia/gstcdparanoia.c
-ext/gnomevfs/gstgnomevfssrc.c
 ext/gnomevfs/gstgnomevfssink.c
+ext/gnomevfs/gstgnomevfssrc.c
+ext/kio/kiosrc.cpp
 ext/sndfile/gstsf.c
-gst/avi/gstavimux.c
+gconf/gstreamer.schemas.in
 gst-libs/gst/play/play.c
+gst/avi/gstavimux.c
+gst/multifilesink/gstmultifilesink.c
+gst/tcp/gsttcp.c
+gst/tcp/gsttcpclientsink.c
+gst/tcp/gsttcpclientsrc.c
 sys/dxr3/dxr3audiosink.c
 sys/dxr3/dxr3audiosink.c
+sys/dxr3/dxr3spusink.c
 sys/dxr3/dxr3videosink.c
 sys/oss/gstosselement.c
 sys/oss/gstossmixer.c
+sys/sunaudio/gstsunmixer.c
+sys/v4l/v4l-overlay_calls.c
 sys/v4l/v4l_calls.c
 sys/v4l/v4l_calls.h
+sys/v4l2/v4l2-overlay_calls.c
 sys/v4l2/v4l2_calls.c
 sys/v4l2/v4l2src_calls.c
