--- a/configure.ac
+++ b/configure.ac
@@ -1489,9 +1489,9 @@ dnl *** musepack ***
 translit(dnm, m, l) AM_CONDITIONAL(USE_MUSEPACK, true)
 GST_CHECK_FEATURE(MUSEPACK, [musepackdec], musepack, [
   AC_LANG_CPLUSPLUS
-  AC_CHECK_HEADER([musepack/musepack.h], [
+  AC_CHECK_HEADER([mpcdec/mpcdec.h], [
     HAVE_MUSEPACK="yes"
-    MUSEPACK_LIBS="-lmusepack"
+    MUSEPACK_LIBS="-lmpcdec"
     AC_SUBST(MUSEPACK_LIBS)
     ], [HAVE_MUSEPACK="no"])
   AC_LANG_C
